<resources>
    <string name="app_name">Logic App</string>
    <string name="title">Conjunction (AND)</string>
    <string name="letter_a">A</string>
    <string name="letter_b">B</string>
    <string name="letter_t">T</string>
    <string name="letter_f">F</string>
    <string name="toast">The correct number of answers is: %d</string>
    <string name="sign">^</string>
    <string name="submit">Submit</string>
    <string name="enter_letter">Enter Letter</string>
</resources>
